css fix: properly aligns both employee and admin dashboard

--- a/src/components/employee-dashboard/employee-dashboard.styles.css
+++ b/src/components/employee-dashboard/employee-dashboard.styles.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-top: 2vh;
+    margin-top: 2vh;
     width: 500px;
 }
