--- a/src/components/emplyee-form/employee-form.styles.css
+++ b/src/components/emplyee-form/employee-form.styles.css
@@ -5,7 +5,7 @@
     width: 250px;
 }
 
-.employee-form > * {
+.employee-form > *:not(:last-child) {
     margin-bottom: 1vh;
 }
 
