--- a/src/components/navigation/navigation.styles.css
+++ b/src/components/navigation/navigation.styles.css
@@ -3,7 +3,7 @@
     background-color: #eeeeee;
     flex-direction: column;
     align-items: flex-start;
-    padding: 2vh 0 0 2vw;
+    padding-left: 2vw;
     margin-right: 2vw;
     height: 100vh;
     width: 15vw;
@@ -32,4 +32,8 @@
     margin-right: 2vw;
     width: 30px;
     height: fit-content;
+}
+
+.header {
+    margin-top: 2vh;
 }
